# japan_address_normalizer

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data_processing/: preprocessing.ipynb  preprocessing.py
src/: add_score.py  compare_input.py  return_zipcode.py
test/: test_add_score.py  test_compare_input.py  test_return_zipcode.py
